# CheckPuzzlesZulip

./: .env  .env.base  .gitignore  AGENTS.md  MIGRATION.md  README.md  alembic.ini  check_puzzles_zulip.db  debug.py  puzzle_reports.db  pyproject.toml
check-puzzles-zulip/: __main__.py  main.py  models.py  zulip.py
check_puzzles_zulip/: __init__.py  __main__.py  check.py  config.py  lichess.py  models.py  parser.py  util.py  zulip.py
diskettes/: 1757487203.py  2467307688.py  254484939.py  378151911.py  859447255.py
migrations/: README.md  env.py  migrate_peewee_to_sqlmodel.py
migrations/versions/: 2026_02_02_2129-949576c81223_initial_migration.py  2026_02_02_2131-80e098498bea_add_check_at_col_to_puzzle.py  2026_02_02_2218-202e1175c2fb_move_delete_lichess_to_puzzle_col.py
migrations_peewee_sqlmodel/: migrate_peewee_to_sqlmodel.py
tests/: test.py
