[project]
name = "check-puzzles-zulip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chess>=1.11.1",
    "peewee>=3.17.8",
    "python-dotenv>=1.0.1",
    "zulip>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pyright>=1.1.393",
]
