[project]
name = "check-puzzles-zulip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chess>=1.11.1",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "zulip>=0.9.0",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "black>=24.8.0",
    "pyright>=1.1.393",
]
migration = [
    "peewee>=3.17.8",
]
